# vvlib

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/vv/: debug.hpp  defer.hpp  macros.hpp  option.hpp  relocate.hpp  result.hpp
tests/: option.cpp  result.cpp
